// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar snapshot > Avatar demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-avatar-children"
      >
        UC
      </div>
    </div>
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-avatar-children"
      >
        MK
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-avatar-children"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="m46.4 16 .3-.3c.9-.7 2.1-.5 2.8.3L66 36.8c.6.7 1.5 1 2.4.6l16.1-6.9c.4-.2.8-.2 1.2-.1 1.1.2 1.8 1.3 1.6 2.4l-8.9 42.9c-.8 3.7-4 6.4-7.8 6.4h-45c-3.8 0-7.1-2.7-7.8-6.4l-9-42.9c-.1-.4 0-.8.1-1.2.4-1 1.6-1.5 2.6-1.1l16.1 6.9c.8.4 1.8.1 2.4-.6L46.4 16z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-square"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar bui-avatar-xsmall bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
    <div
      class="bui-avatar bui-avatar-small bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
    <div
      class="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
    <div
      class="bui-avatar bui-avatar-large bui-avatar-rounded"
    >
      <div
        class="bui-image bui-avatar-img"
      >
        <img
          alt=""
          class="bui-image-img bui-image-loaded"
          loading="eager"
          src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
          style="object-fit: cover;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 2;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 1;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 2;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 1;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </div>
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-square"
        style="z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-square"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-square"
        style="z-index: 2;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-square"
        style="z-index: 1;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 8`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-extra bui-avatar-medium bui-avatar-rounded"
        style="z-index: 2;"
      >
        <div
          class="bui-avatar-children"
        >
          +2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 9`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 2;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 1;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </div>
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 0;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 1;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 2;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar snapshot > Avatar demo snapshot 0 10`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-avatar-group"
    >
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="margin-left: -10px; z-index: 4;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-avatar bui-avatar-medium bui-avatar-rounded"
        style="margin-left: -10px; z-index: 3;"
      >
        <div
          class="bui-image bui-avatar-img"
        >
          <img
            alt=""
            class="bui-image-img bui-image-loaded"
            loading="eager"
            src="https://gw.alicdn.com/tfs/TB1Q2zRXuL2gK0jSZFmXXc7iXXa-120-120.png"
            style="object-fit: cover;"
          />
        </div>
      </div>
      <div
        class="bui-avatar bui-avatar-group-extra bui-avatar-medium bui-avatar-rounded"
        style="margin-left: -10px; z-index: 2;"
      >
        <div
          class="bui-avatar-children"
        >
          +2
        </div>
      </div>
    </div>
  </div>
</div>
`;
